--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </main>
                         <aside>
                             <div class="aside-item" id="sobreMim">
-                                <h2>Sobre Mim</h2>
+                                <h2>Sobre nos</h2>
                                 <img src="img/fernandozanesco.jpg" alt="">
                                 <h3>Fernando Zanesco Boeira</h3>
                                 <p>Nasci em 1976, tenho 2 irmãos mais velhos, criado em um a família tradicional na região metropolitana de Curitiba.
