--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <p>
 
                                 </p>
-                                <p>
+                                <p>O apelido Coxa-Branca (atualmente também apenas Coxa) teve origem na discriminação que os descendentes de alemães sofriam na primeira metade do século passado no Brasil, principalmente no período da Segunda Guerra Mundial, quando esses imigrantes eram vistos por algumas pessoas como inimigos infiltrados no país.
                                 <a href="https://www.coritiba.com.br/artigo/25186/o_primeiro_coxa_branca">Leia mais..</a></p>
                             </article>
                             <article>
