--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <article>
                                 <h2>Viagem ao Chile</h2>
                                 <span>Publicado: 03/03/2024</span>
-                                <img src="img/viagemchile.jpg" alt="">
+                                <img src="img/coxa.jpg" alt="">
                                 <p>
 
                                 </p>
