--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <div class="container-main">
                         <main>
                             <article>
-                                <h2>Viagem ao Chile</h2>
-                                <span>Publicado: 03/03/2024</span>
+                                <h2>coxa é foda</h2>
+                                <span>Publicado: 12/03/2024</span>
                                 <img src="img/coxa.jpg" alt="">
                                 <p>
 
