--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <a href="https://www.coritiba.com.br/artigo/25186/o_primeiro_coxa_branca">Leia mais..</a></p>
                             </article>
                             <article>
-                                <h2>Dia da Amazônia</h2>
+                                <h2>dia das crianças</h2>
                                 <span>Publicado: 05/09/2023</span>
                                 <img src="img/amazonia.jpg" alt="">
                                 <p>Um dos patrimônios naturais mais valiosos de toda a humanidade e a maior reserva natural do planeta! A Floresta Amazônica é chave importante para a estabilidade climática planetária, ela influencia e impacta regiões que ultrapassam suas fronteiras. O bioma Amazônia abrange a maior bacia hidrográfica do mundo e a maior floresta tropical – a maior diversidade de fauna e flora do planeta!
