--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <article>
                                 <h2>dia das crianças</h2>
                                 <span>Publicado: 05/09/2023</span>
-                                <img src="leandrinha.jpeg" alt="">
+                                <img src="img/leandinha.jpeg" alt="">
                                 <p>Um dos patrimônios naturais mais valiosos de toda a humanidade e a maior reserva natural do planeta! A Floresta Amazônica é chave importante para a estabilidade climática planetária, ela influencia e impacta regiões que ultrapassam suas fronteiras. O bioma Amazônia abrange a maior bacia hidrográfica do mundo e a maior floresta tropical – a maior diversidade de fauna e flora do planeta!
 
                                 </p>
