--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <a href="https://mundoeducacao.uol.com.br/datas-comemorativas/05-setembro-dia-amazonia.htm">Leia mais..</a>
                             </article>
                             <article>
-                                <h2>23 de Novembro -  Dia do Engenheiro Eletricista</h2>
+                                <h2>dia 25 de dezembro natal</h2>
                                 <span>Publicado: 23/11/2022</span>
                                 <img src="img/dia-do-engenheiro-eletricista.jpg" alt="">
                                 <p>O dia do Engenheiro Eletricista é comemorado no dia 23 de novembro, é uma homenagem aos profissionais responsáveis por toda energia elétrica que é distribuída, fazendo com que a energia chegue da melhor e mais segura forma aos pontos de entrega, sendo assim, foi criado um dia dedicado a profissionais que carregam a grande responsabilidade de manter o funcionamento todas as fontes de energia de um país.</p>
@@ -63,7 +63,7 @@
                             </article>
                             <article>
                                 <h2>15 de Outubro - Dia dos "sofredores" digo, dos Professores</h2>
-                                <span>Publicado: 15/10/2022</span>
+                                <span>Publicado: em 2010</span>
                                 <img src="img/professores.jpg" alt="">
                                 <p>O dia 15 de outubro foi escolhido para comemorar o dia do professor, pois em 15 de outubro de 1827, Dom Pedro I, Imperador do Brasil, decretou uma Lei Imperial responsável pela criação do Ensino Elementar no Brasil (do qual chamou “Escola de Primeiras Letras”), e através deste decreto todas as cidades deveriam ter suas escolas de primeiro grau.</p>
                                                                 <a href="https://educacao.uol.com.br/datas-comemorativas/1015---dia-do-professor.htm">Leia mais..</a>
