--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
                                 <h2>15 de Outubro - Dia dos "sofredores" digo, dos Professores</h2>
                                 <span>Publicado: em 2010</span>
                                 <img src="img/professores.jpg" alt="">
-                                <p>O dia 15 de outubro foi escolhido para comemorar o dia do professor, pois em 15 de outubro de 1827, Dom Pedro I, Imperador do Brasil, decretou uma Lei Imperial responsável pela criação do Ensino Elementar no Brasil (do qual chamou “Escola de Primeiras Letras”), e através deste decreto todas as cidades deveriam ter suas escolas de primeiro grau.</p>
+                                <p> Natal ou Dia de Natal é um feriado e festival religioso cristão[3] comemorado anualmente em 25 de dezembro (nos países eslavos e ortodoxos, cujos calendários eram baseados no calendário juliano, é comemorado no dia 7 de janeiro). A data é o centro das festas de fim de ano e da temporada de férias, sendo, no cristianismo, o marco inicial do Ciclo do Natal, que dura doze dias.[4]
+
+                                    De acordo com maior parte dos historiadores, a festa originalmente era destinada a celebrar o nascimento anual do Deus Sol no solstício de inverno (natalis invicti Solis),[5] a festividade foi ressignificada pela Igreja Católica no século III para estimular a conversão dos povos pagãos sob o domínio do Império Romano[6][7][8] e então passou a comemorar o nascimento de Jesus de Nazaré.[9][10]
+                                    
+                                    Embora tradicionalmente seja um dia santificado cristão, o Natal é amplamente comemorado por muitos não cristãos,[1][11] sendo que alguns de seus costumes populares e temas comemorativos têm origens pré-cristãs ou seculares. Costumes populares modernos típicos do feriado incluem a troca de presentes e cartões, a Ceia de Natal, músicas natalinas, festas de igreja, uma refeição especial e a exibição de decorações diferentes; incluindo as árvores de Natal, pisca-piscas e guirlandas, visco, presépios e ilex. Além disso, o Papai Noel (conhecido como Pai Natal em Portugal) é uma figura mitológica popular em muitos países, associada com os presentes para crianças</p>
                                                                 <a href="https://educacao.uol.com.br/datas-comemorativas/1015---dia-do-professor.htm">Leia mais..</a>
                             </article>    
                         </main>
