--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <article>
                                 <h2>dia 25 de dezembro natal</h2>
                                 <span>Publicado: 23/11/2022</span>
-                                <img src="img/dia-do-engenheiro-eletricista.jpg" alt="">
+                                <img src="img/natal.jpg" alt="">
                                 <p>O dia do Engenheiro Eletricista é comemorado no dia 23 de novembro, é uma homenagem aos profissionais responsáveis por toda energia elétrica que é distribuída, fazendo com que a energia chegue da melhor e mais segura forma aos pontos de entrega, sendo assim, foi criado um dia dedicado a profissionais que carregam a grande responsabilidade de manter o funcionamento todas as fontes de energia de um país.</p>
                                                                 <a href="https://vestibular.brasilescola.uol.com.br/noticias/dia-engenheiro-eletricista-profissao-pratica/355645.html">Leia mais..</a>
                             </article>
