--- a/index.html
+++ b/index.html
@@ -56,16 +56,20 @@
                             </article>
                             <article>
                                 <h2>dia 25 de dezembro natal</h2>
-                                <span>Publicado: 23/11/2022</span>
+                                <span>publicado: em 2010</span>
                                 <img src="img/natal.jpg" alt="">
-                                <p>O dia do Engenheiro Eletricista é comemorado no dia 23 de novembro, é uma homenagem aos profissionais responsáveis por toda energia elétrica que é distribuída, fazendo com que a energia chegue da melhor e mais segura forma aos pontos de entrega, sendo assim, foi criado um dia dedicado a profissionais que carregam a grande responsabilidade de manter o funcionamento todas as fontes de energia de um país.</p>
+                                <p> Natal ou Dia de Natal é um feriado e festival religioso cristão[3] comemorado anualmente em 25 de dezembro (nos países eslavos e ortodoxos, cujos calendários eram baseados no calendário juliano, é comemorado no dia 7 de janeiro). A data é o centro das festas de fim de ano e da temporada de férias, sendo, no cristianismo, o marco inicial do Ciclo do Natal, que dura doze dias.[4]
+
+                                    De acordo com maior parte dos historiadores, a festa originalmente era destinada a celebrar o nascimento anual do Deus Sol no solstício de inverno (natalis invicti Solis),[5] a festividade foi ressignificada pela Igreja Católica no século III para estimular a conversão dos povos pagãos sob o domínio do Império Romano[6][7][8] e então passou a comemorar o nascimento de Jesus de Nazaré.[9][10]
+                                    
+                                    Embora tradicionalmente seja um dia santificado cristão, o Natal é amplamente comemorado por muitos não cristãos,[1][11] sendo que alguns de seus costumes populares e temas comemorativos têm origens pré-cristãs ou seculares. Costumes populares modernos típicos do feriado incluem a troca de presentes e cartões, a Ceia de Natal, músicas natalinas, festas de igreja, uma refeição especial e a exibição de decorações diferentes; incluindo as árvores de Natal, pisca-piscas e guirlandas, visco, presépios e ilex. Além disso, o Papai Noel (conhecido como Pai Natal em Portugal) é uma figura mitológica popular em muitos países, associada com os presentes para crianças.[12]</p>
                                                                 <a href="https://vestibular.brasilescola.uol.com.br/noticias/dia-engenheiro-eletricista-profissao-pratica/355645.html">Leia mais..</a>
                             </article>
                             <article>
                                 <h2>15 de Outubro - Dia dos "sofredores" digo, dos Professores</h2>
-                                <span>Publicado: em 2010</span>
-                                <img src="img/professores.jpg" alt="">
-                                <p> Natal ou Dia de Natal é um feriado e festival religioso cristão[3] comemorado anualmente em 25 de dezembro (nos países eslavos e ortodoxos, cujos calendários eram baseados no calendário juliano, é comemorado no dia 7 de janeiro). A data é o centro das festas de fim de ano e da temporada de férias, sendo, no cristianismo, o marco inicial do Ciclo do Natal, que dura doze dias.[4]
+                                <span></span>
+                                <img src="" alt="">
+                                <p>  (  
 
                                     De acordo com maior parte dos historiadores, a festa originalmente era destinada a celebrar o nascimento anual do Deus Sol no solstício de inverno (natalis invicti Solis),[5] a festividade foi ressignificada pela Igreja Católica no século III para estimular a conversão dos povos pagãos sob o domínio do Império Romano[6][7][8] e então passou a comemorar o nascimento de Jesus de Nazaré.[9][10]
                                     
