--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <article>
                                 <h2>dia 1 de maio</h2>
                                 <span></span>
-                                <img src="" alt="">
+                                <img src="img/trabalhador.png" alt="">
                                 <p>Dia do Trabalhador
 
                                     Artigo
