--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <div class="aside-item" id="sobreMim">
                                     <<<<<<< HEAD
                                                                     <h2>Sobre nos</h2>
-                                                                    <img src="img/cristiano.jpg" al <div class="aside-item" id="sobreMim"></div>t="">
+                                                                    <img src="img/Cristiano cr7.jpeg" al <div class="aside-item" id="sobreMim"></div>t="">
 =======
                                 <h2>Sobre nos</h2>
                                 <img src="img/leonardo
